# toy_go

./: .gitignore  AGENTS.md  Makefile  main.py  pyproject.toml  train.sh  train5x5.sh  train7x7.sh
.github/workflows/: ruff.yml
src/az_go/: __init__.py  augment.py  cli.py  game.py  learner.py  mcts.py  net.py  selfplay.py  utils.py
src/toy_go/: cli.py  learner.py  mcts.py  net.py  pvc.py  selfplay.py  utils.py  visualize.py
tests/: test_pyspiel_returns.py  test_utils.py
